--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,30 @@
 <resources>
-    <string name="app_name">GNSSReader</string>
-    <string name="edit_message">Enter a message</string>
-    <string name="button_send">Send</string>
-    <string name="title_activity_server">ServerActivity</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
 
-    <string name="title_activity_info">InfoActivity</string>
-    <string name="dummy_button">Dummy Button</string>
-    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <!-- App Info Strings -->
+    <string name="app_name">GNSSReader</string>
+
+    <!-- Developer Info Strings -->
+    <string name="developer_name">Rooster Glue, Inc.</string>
+    <string name="developer_url">https://roosterglue.com</string>
+
+    <!-- Organization Info Strings -->
+    <string name="organization_name">PublicNTP</string>
+    <string name="organization_url">https://publicntp.org/</string>
+
+    <!-- Info Fragment Strings-->
+    <string name="info_btn_website_label">Website</string>
+    <string name="info_btn_contact_label">Contact</string>
+    <string name="info_text_title">About</string>
+    <string name="info_text_content">Thanks for using out app. We\'re PublicNTP, a nonprofit that provides unrestricted access to no-cost, highly-accurate time sources for the public good. Help us help you. Donate and bring time to the world!</string>
+    <string name="info_text_version">Version %1$s</string>
+    <string name="info_text_developer">Built by %1$s</string>
+    <string name="info_text_organization">Owned by %1$s</string>
+
+    <!-- Navigation Strings -->
+    <string name="title_action_info">Info</string>
+    <string name="title_action_satl">Satellites</string>
+    <string name="title_action_serv">Server</string>
+    <string name="title_action_time">Time</string>
+
+
 </resources>
