--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- App Info Strings -->
-    <string name="app_name">PublicNTP Time Server</string>
+    <string name="app_name">Time Server</string>
 
     <!-- Time Fragment Strings -->
     <string name="time_image_logo_desc">PublicNTP Logo</string>
@@ -30,12 +30,5 @@
     <string name="error_web_browser_not_found">There are no web browsers installed.</string>
     <string name="no_root_warning">This feature is only available with a rooted device.</string>
     <string name="kill_ntp_service">Stop NTP Server</string>
-
-    <string name="test_html">
-        <b>Well Hiya Fren</b>
-        <i>Having a day?</i>
-        <u>Aww what a day it is</u>
-        <p>Thing 1</p><p>Thing 2</p>
-    </string>
 
 </resources>
