--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,6 @@
     <string name="error_web_browser_not_found">There are no web browsers installed.</string>
     <string name="no_root_warning">This feature is only available with a rooted device.</string>
     <string name="kill_ntp_service">Stop NTP Server</string>
+    <string name="test_string">Number of Satellites: idk, 6?</string>
 
 </resources>
