Switching the time reading to Location.getTime Fixed a bug in the compass readings for the Satellite Display (not having an accuracy measurement disabled the compass). Sped up the way we store time by a line or 2 of code. Disabled location change requirement for getting a new GPS fix.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,5 +33,10 @@
     <string name="test_string">Number of Satellites: idk, 6?</string>
     <string name="in_view">in view</string>
     <string name="in_use">in use</string>
+    <string name="distance_accuracy_units">ft</string>
+    <string name="time_accuracy_units">seconds</string>
+    <string name="server_status">Server Off</string>
+    <string name="default_timezone">UTC</string>
+    <string name="placeholder_server_traffic">1,234</string>
 
 </resources>
