--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="info_btn_website_label">Website</string>
     <string name="info_btn_contact_label">Contact</string>
     <string name="info_text_title">About</string>
-    <string name="info_text_content">Thanks for using out app. We\'re PublicNTP, a nonprofit that provides unrestricted access to no-cost, highly-accurate time sources for the public good. Help us help you. Donate and bring time to the world!</string>
+    <string name="info_text_content">Thanks for using our app. We\'re PublicNTP, a nonprofit that provides unrestricted access to no-cost, highly-accurate time sources for the public good. Help us help you. Donate and bring time to the world!</string>
     <string name="info_text_version">Version %1$s</string>
     <string name="info_text_developer">Built by %1$s</string>
     <string name="info_text_organization">Owned by %1$s</string>
@@ -35,10 +35,16 @@
     <string name="in_use">in use</string>
     <string name="distance_accuracy_units">ft</string>
     <string name="time_accuracy_units">sec</string>
-    <string name="server_status">Server Off</string>
+    <string name="server_off">Server Off</string>
     <string name="default_timezone">UTC</string>
     <string name="placeholder_server_traffic">1,234</string>
     <string name="time_options_text">OPTIONS</string>
     <string name="placeholder_time_offset">±1.234</string>
+    <string name="server_on">Server On</string>
+    <string name="open_location_in_maps">Open Location in Maps</string>
+    <string name="share_location">Share Location</string>
+    <string name="time_zone">Time Zone</string>
+    <string name="location_units">Location Units</string>
+    <string name="copy_to_clipboard">Copy to Clipboard</string>
 
 </resources>
