New nav bar, refactored layouts, modal for satellite details and modal for options.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,5 +46,14 @@
     <string name="time_zone">Time Zone</string>
     <string name="location_units">Location Units</string>
     <string name="copy_to_clipboard">Copy to Clipboard</string>
+    <string name="coordinates">Coordinates:</string>
+    <string name="constellation">Constellation:</string>
+    <string name="satellite_title_example">Satellite 6</string>
+    <string name="satellite_coordinates_example">66 N 66 E</string>
+    <string name="altitude_angle">Altitude Angle: </string>
+    <string name="heading">Heading:</string>
+    <string name="satellite_heading_example">60 degrees from North</string>
+    <string name="satellite_altitude_example">1000 feet</string>
+    <string name="signal_to_noise_ratio">Signal-to-Noise Ratio:</string>
 
 </resources>
