Serves time on port 123. Logs data and graphs it. Organized time units in TimeMillis. Snackbar has been replaced with the highlighted Winebar. Splashscreen is animated and I've moved the Location registration into it. Blues made more consistent. UI changes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
     <!-- Error Strings -->
     <string name="error_email_client_not_found">There are no email clients installed.</string>
     <string name="error_web_browser_not_found">There are no web browsers installed.</string>
-    <string name="no_root_warning">This feature is only available with a rooted device.</string>
+    <string name="no_root_warning">This feature works best with a rooted device.</string>
     <string name="kill_ntp_service">Stop NTP Server</string>
     <string name="test_string">Number of Satellites: idk, 6?</string>
     <string name="in_view">in view</string>
