--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,5 +55,7 @@
     <string name="satellite_heading_example">60 degrees from North</string>
     <string name="satellite_altitude_example">1000 feet</string>
     <string name="signal_to_noise_ratio">Signal-to-Noise Ratio:</string>
+    <string name="info_text_designer">Designed by Kempt LLC</string>
+    <string name="unreliable_connection_warning">No reliable connection - connect to ethernet or wifi</string>
 
 </resources>
