--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="about_text_content">Thanks for using our app. We\'re PublicNTP, a nonprofit that provides unrestricted access to no-cost, highly-accurate time sources for the public good. Help us help you. Donate and bring time to the world!</string>
     <string name="about_text_version">Version %1$s</string>
     <string name="about_text_organization">Owned by PublicNTP, Inc.</string>
-    <string name="about_text_designer">Designed by Kempt Design, LLC</string>
+    <string name="about_text_designer">Designed by Keltson Howell</string>    
     <string name="about_text_developer">Built by Pony Express Productions, LLC</string>
 
     <string name="contact_email_address">contact@publicntp.org</string>
