--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,7 +71,7 @@
     <string name="satellite_heading_example">60 degrees from North</string>
     <string name="satellite_altitude_example">1000 feet</string>
     <string name="signal_to_noise_ratio">Carrier-to-Noise Ratio:</string>
-    <string name="carrier_frequency">Carrier Frequency:</string>
+    <string name="carrier_frequency">Carrier Freq:</string>
     <string name="carrier_frequency_example">L1:</string>
     <string name="unreliable_connection_warning">No reliable connection - connect to ethernet or wifi</string>
 
