--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="about_btn_contact_label">Contact</string>
     <string name="about_text_title">About</string>
     <string name="about_text_content"><b>PublicNTP</b> is a nonprofit that provides unrestricted access to no-cost, highly-accurate time sources for the public good. Help us help you. Donate and bring time to the world!</string>
-    <string name="about_text_version">Build Version 1.0.20</string>
+    <string name="about_text_version">Build Version 1.0.24</string>
     <string name="about_text_organization"><b>Time Server App</b> is copyrighted by PublicNTP, Inc., open-sourced under the MIT License</string>
 
     <string name="contact_email_address">contact@publicntp.org</string>
@@ -24,7 +24,7 @@
 
     <string name="about_text_credit_title">Credits</string>
     <string name="about_individual_title">Individuals</string>
-    <string name="about_individual_text">Alex Porter\nBrad Woodfin\nBryant Oblad\nCam Peterson\nCody Deskins\nDan Nolan\nEric Evans\nKeltson Howell\nMicah Brown\nRichard Macdonald\nScott Waddell\nTerry Ott\nTod Robbins\nWylie Thomas\nZachary Neubert</string>
+    <string name="about_individual_text">Alex Porter\nAlice Neubert\nBrad Woodfin\nBryant Oblad\nCam Peterson\nCody Deskins\nDan Nolan\nDane Oborn\nEric Evans\nKeltson Howell\nMicah Brown\nRichard Macdonald\nScott Waddell\nTerry Ott\nTod Robbins\nWylie Thomas</string>
     <string name="about_organization_title">Organizations</string>
     <string name="about_organization_text">Kempt Design LLC\nNetwork Time Foundation\nPony Express Productions, LLC\nPublicNTP, Inc.\nRooster Glue, Inc.\nSixbucks Solutions, LLC</string>
     <string name="about_projects_title">Projects</string>
@@ -56,9 +56,12 @@
     <string name="time_options_text">OPTIONS</string>
     <string name="placeholder_time_offset">±1.234</string>
     <string name="server_on">Server On</string>
+    <string name="server_running">"NTP Server Running"</string>
+    <string name="server_port">Running on</string>
+    <string name="firewall_fail">Firewall routing failed. Server may not work.</string>
     <string name="open_location_in_maps">Open Location in Maps</string>
     <string name="share_location">Open in Maps</string>
-    <string name="time_zone">Local Time Zone</string>
+    <string name="time_zone">Time Standard</string>
     <string name="measurement_title">System of Measurement</string>
     <string name="location_units">Geocoordinate Standard</string>
     <string name="copy_to_clipboard">Copy to Clipboard</string>
@@ -80,5 +83,13 @@
     <string name="port_title">Interface Port</string>
     <string name="packet_title">Throttle (Packets/min)</string>
     <string name="auto_start">Auto-Start NTP Server</string>
+    <string name="complete">Done</string>
+    <string name="sntp_server">SNTP Server</string>
+    <string name="packet_min">packets/min</string>
+    <string name="pntp">PublicNTP</string>
+    <string name="horizon">above horizon</string>
+    <string name="north">from North</string>
+    <string name="compass_enabled">Compass Enabled.</string>
+    <string name="compass_disabled">Compass Disabled.</string>
 
 </resources>
