--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,24 +11,24 @@
     <string name="about_btn_contact_label">Contact</string>
     <string name="about_text_title">About</string>
     <string name="about_text_content"><b>PublicNTP</b> is a nonprofit that provides unrestricted access to no-cost, highly-accurate time sources for the public good. Help us help you. Donate and bring time to the world!</string>
-    <string name="about_text_version">Build Version 1.0.24</string>
+    <string name="about_text_version">Build Version</string>
     <string name="about_text_organization"><b>Time Server App</b> is copyrighted by PublicNTP, Inc., open-sourced under the MIT License</string>
 
-    <string name="contact_email_address">contact@publicntp.org</string>
+    <string name="contact_email_address" translatable="false">contact@publicntp.org</string>
     <string name="contact_email_subject">PublicNTP Inquiry</string>
-    <string name="developer_web_address">https://roosterglue.com</string>
-    <string name="owner_web_address">https://publicntp.org</string>
-    <string name="owner_visit_address">https://publicntp.org</string>
+    <string name="developer_web_address" translatable="false">https://roosterglue.com</string>
+    <string name="owner_web_address" translatable="false">https://publicntp.org</string>
+    <string name="owner_visit_address" translatable="false">https://publicntp.org</string>
     <string name="donate_text">Find out more about PublicNTP.</string>
     <string name="donate_title">VISIT</string>
 
     <string name="about_text_credit_title">Credits</string>
     <string name="about_individual_title">Individuals</string>
-    <string name="about_individual_text">Alex Porter\nAlice Neubert\nBrad Woodfin\nBryant Oblad\nCam Peterson\nCody Deskins\nDan Nolan\nDane Oborn\nEric Evans\nKeltson Howell\nMicah Brown\nRichard Macdonald\nScott Waddell\nTerry Ott\nTod Robbins\nWylie Thomas</string>
+    <string name="about_individual_text" translatable="false">Alex Porter\nAlice Neubert\nBrad Woodfin\nBryant Oblad\nCam Peterson\nCody Deskins\nDan Nolan\nDane Oborn\nEric Evans\nKeltson Howell\nMicah Brown\nRichard Macdonald\nScott Waddell\nTerry Ott\nTod Robbins\nWylie Thomas</string>
     <string name="about_organization_title">Organizations</string>
-    <string name="about_organization_text">Kempt Design LLC\nNetwork Time Foundation\nPony Express Productions, LLC\nPublicNTP, Inc.\nRooster Glue, Inc.\nSixbucks Solutions, LLC</string>
+    <string name="about_organization_text" translatable="false">Kempt Design LLC\nNetwork Time Foundation\nPony Express Productions, LLC\nPublicNTP, Inc.\nRooster Glue, Inc.\nSixbucks Solutions, LLC</string>
     <string name="about_projects_title">Projects</string>
-    <string name="about_projects_text">GPSTest Project\nNASA WorldWind\nNetwork Time Protocol (NTP)\nOpen Location Code (Plus Codes)</string>
+    <string name="about_projects_text" translatable="false">GPSTest Project\nNASA WorldWind\nNetwork Time Protocol (NTP)\nOpen Location Code (Plus Codes)</string>
 
     <!-- Navigation Strings -->
     <string name="title_action_info">Info</string>
@@ -48,13 +48,13 @@
     <string name="test_string">Number of Satellites: idk, 6?</string>
     <string name="in_view">in view</string>
     <string name="in_use">in use</string>
-    <string name="distance_accuracy_units">m</string>
-    <string name="time_accuracy_units">sec</string>
+    <string name="distance_accuracy_units" translatable="false">m</string>
+    <string name="time_accuracy_units" translatable="false">sec</string>
     <string name="server_off">Server Off</string>
-    <string name="default_timezone">UTC</string>
-    <string name="placeholder_server_traffic">1,234</string>
+    <string name="default_timezone" translatable="false">UTC</string>
+    <string name="placeholder_server_traffic" translatable="false">1,234</string>
     <string name="time_options_text">OPTIONS</string>
-    <string name="placeholder_time_offset">±1.234</string>
+    <string name="placeholder_time_offset" translatable="false">±1.234</string>
     <string name="server_on">Server On</string>
     <string name="server_running">"NTP Server Running"</string>
     <string name="server_port">Running on</string>
@@ -67,17 +67,18 @@
     <string name="copy_to_clipboard">Copy to Clipboard</string>
     <string name="coordinates">Coordinates:</string>
     <string name="constellation">Constellation:</string>
-    <string name="satellite_title_example">Satellite 6</string>
-    <string name="satellite_coordinates_example">66 N 66 E</string>
+    <string name="satellite_title_example" translatable="false">Satellite 6</string>
+    <string name="satellite_coordinates_example" translatable="false">66 N 66 E</string>
     <string name="altitude_angle">Elevation: </string>
     <string name="heading">Azimuth:</string>
-    <string name="satellite_heading_example">60 degrees from North</string>
-    <string name="satellite_altitude_example">1000 feet</string>
+    <string name="satellite_heading_example" translatable="false">60 degrees from North</string>
+    <string name="satellite_altitude_example" translatable="false">1000 feet</string>
     <string name="signal_to_noise_ratio">Carrier-to-Noise Ratio:</string>
     <string name="carrier_frequency">Carrier Freq:</string>
-    <string name="carrier_frequency_example">L1:</string>
+    <string name="carrier_frequency_example" translatable="false">L1:</string>
     <string name="unreliable_connection_warning">No reliable connection - connect to ethernet or wifi</string>
     <string name="running">Running On </string>
+
     <string name="stratum_title">Stratum Level</string>
     <string name="network_title">Network Interface</string>
     <string name="port_title">Interface Port</string>
@@ -91,5 +92,7 @@
     <string name="north">from North</string>
     <string name="compass_enabled">Compass Enabled.</string>
     <string name="compass_disabled">Compass Disabled.</string>
+    <string name="help">Help</string>
+    <string name="minutes_passed">Minutes Ago</string>
 
 </resources>
