--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -32,7 +32,7 @@
     <string name="time_options_text">OPCIONES</string>
     <string name="server_on">Servidor encendido</string>
     <string name="server_running">Servidor NTP en servicio</string>
-    <string name="server_port">Ejecutado en</string>
+    <string name="server_port">Se ejecuta en</string>
     <string name="firewall_fail">Enrutamiento cortafuegos fallo. El servidor puede que no funcione.</string>
     <string name="open_location_in_maps">Abrir ubicación en Mapas</string>
     <string name="share_location">Abrir en Mapas</string>
@@ -61,4 +61,5 @@
     <string name="compass_enabled">Brújula habilitada</string>
     <string name="compass_disabled">Brújula deshabilitada</string>
     <string name="help">ayuda</string>
+    <string name="signal_to_noise_ratio">Relación Portadora/ruido</string>
 </resources>
