--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -5,7 +5,7 @@
     <string name="about_btn_website_label">Sitio Web</string>
     <string name="about_btn_contact_label">Contáctenos</string>
     <string name="about_text_title">Quiénes somos</string>
-    <string name="about_text_content"><b>PublicNTP</b> es una organization no lucrativa que proporciona acceso sin restricciones, sin ningún costo, y es una fuentes de tiempo precisión pára el bien de el público. Ayúdenos. Sus donaciones traen el tiempo precisó acia mundo.</string>
+    <string name="about_text_content"><b>PublicNTP</b> es una organization no lucrativa que proporciona acceso sin restricciones, sin ningún costo, y es una fuentes de tiempo precisión pára el bien de el público. Ayúdenos. Sus donaciones traen el tiempo precisó acia el mundo.</string>
     <string name="about_text_version">Versión Actual</string>
     <string name="about_text_organization"><b>Time Server App</b> es propiedad de PublicNTP, Inc., de código abierto bajo la licencia de MIT</string>
     <string name="contact_email_subject">Preguntas hacia PublicNTP</string>
